syntax="proto3";
option java_package="com.goconsult.grpc";

service NotificationService{
  rpc sendEmail(emailDetail) returns(responseMessage);
  rpc sendOtp(otpMessage) returns(responseMessage);

  }

  message emailDetail{
     string recipient=1;
     string subject=2;
     string message=3;
  }
  message otpMessage{
    string recipient=1;
  }

  message responseMessage{
   string message=1;
   int32 responseCode=2;
  }
