syntax ="proto3";
option  java_package="com.goconsult.grpc";

service AuthService{
  rpc register(registrationDetail) returns(registerMessage);
  rpc login(credential) returns(loginMessage);

  rpc forgotPassword(userEmail) returns(responseMessage);  //functionality  of Notification Service
  rpc resetPassword(resetDetailWithOtp) returns(responseMessage);

}
     message  registrationDetail{
      string user_type=1; //required
      string email=2;     //required
      string password=3;  //required
      string name= 4;    //required

      string contact=5;
      string address= 6;
      string dob=7;
      string gender= 8;

      string occupation= 9; //for user

      string specialization=10; //for counselor
      int32 experience=11;      //for counselor
      int32 fees=12;          //for counselor

     }

     message registerMessage{
        int32 uid=1;
        string message=2;
     }

     message credential{
       string email=1;
       string password=2;
     }
     message loginMessage{
       string authToken=1;
       string message=2;
     }

     message userEmail{
      string email=1;
     }

     message resetDetailWithOtp{
      string email=1;
      string otp=2;
      string password=3;
      string conf_password=4;
     }

     message responseMessage{
      string message=1;
      int32 responseCode=2;
     }
